# AgroDiagnose

./: .env  .gitignore  package-lock.json  package.json  pyproject.toml  server.js  theme.json
api/: app.py  requirements.txt  translations.py
attached_assets/: Pasted-Please-update-my-Flask-backend-to-use-the-trained-SavedModel-located-in-ml-model-plant-model-saved-1743737817249.txt  Pasted-Please-update-my-Flask-backend-to-use-the-trained-SavedModel-located-in-ml-model-plant-model-saved-1743737890786.txt
client/: index.html  tailwind.config.ts  vite.config.ts
client/public/plant-model/: model.json
client/src/: App.tsx  index.css
client/src/components/: DiagnosisResult.tsx  Footer.tsx  Header.tsx  HistoryItem.tsx  ImageUpload.tsx  MobileNavigation.tsx  TFModelDetection.tsx  TFModelDetection.tsx.new
client/src/lib/: queryClient.ts  translations.ts
client/src/pages/: DiagnosisHistory.tsx  Home.tsx  LocalModelDetection.tsx  not-found.tsx
ml-model/: app.py  requirements.txt  run.py  start.sh  translations.py
server/: routes.ts  storage.ts
shared/: schema.ts
